# QT-zjt

./: README.md
QMDemo/: Readme.txt
QMDemo/Concurrent/: Readme.txt
QMDemo/Concurrent/Thread01/build-thread01-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  thread01.ilk
QMDemo/Concurrent/Thread01/thread01/: CMakeLists.txt  main.cpp
QMDemo/Concurrent/Thread02/build-thread02-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  thread02.ilk
QMDemo/Concurrent/Thread02/thread02/: CMakeLists.txt  main.cpp
QMDemo/Concurrent/Thread03/Thread03/: CMakeLists.txt  main.cpp  main.qml
QMDemo/Concurrent/Thread03/build-Thread03-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Thread03.ilk  build.ninja  cmake_install.cmake
QMDemo/Concurrent/Thread04/Thread04/: CMakeLists.txt  main.cpp  main.qml
QMDemo/Concurrent/Thread04/build-Thread04-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Thread04.ilk  build.ninja  cmake_install.cmake
QMDemo/NetWork/: Readme.txt
QMDemo/NetWork/network01/build-network01-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QMDemo/NetWork/network01/network01/: CMakeLists.txt  interaction.cpp  interaction.h  main.cpp  main.qml
QMDemo/NetWork/network01/network01/network/: CMakeLists.txt  queue.h  tcpclient.cpp  tcpclient.h
QMDemo/NetWork/network01/network01/thread/: CMakeLists.txt  ThreadWorkerControl.h
QMDemo/NetWork/network02/build-network02-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  network02.ilk
QMDemo/NetWork/network02/network02/: CMakeLists.txt  main.qml
QML/demo01/demo01/: demo01.qmlproject
QML_With_C++/cmake6.2/: Readme.txt
QML_With_C++/cmake6.2/demo01/build-demo-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appdemo.exp  appdemo.ilk  appdemo.lib  appdemo_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
QML_With_C++/cmake6.2/demo01/demo/: CMakeLists.txt  main.cpp  main.qml
QML_With_C++/qmake5.15/: Readme.txt
QML_With_C++/qmake5.15/demo01/build-demo01-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QML_With_C++/qmake5.15/demo01/demo01/: controller.cpp  controller.h  demo01.pro  interaction.cpp  interaction.h  main.cpp  main.qml  worker.cpp  worker.h
QML_With_C++/qmake5.15/demo02/build-demo02-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
QML_With_C++/qmake5.15/demo02/demo02/: main.qml  qml.qrc
QML_With_C++/qmake5.15/demo03/build-demo03-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
QML_With_C++/qmake5.15/demo03/demo03/: demo04.pro  main.cpp  main.qml
Weight/cmake5.15/: Readme.txt
Weight/cmake5.15/demo01/build-demo07-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo07.ilk
Weight/cmake5.15/demo01/build-demo07-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo07.ilk  qtcsettings.cmake
Weight/cmake5.15/demo01/demo01/: CMakeLists.txt  videowidget.cpp  videowidget.h  widget.cpp  widget.h  widget.ui
Weight/cmake5.15/demo01/demo01/Media/: audioplay.cpp  audioplay.h  audiothread.cpp  audiothread.h  decode.cpp  decode.h  decodethread.cpp  decodethread.h  demux.cpp  demux.h  demuxthread.cpp  demuxthread.h  resample.cpp  resample.h  videocall.h  videothread.cpp  videothread.h
Weight/cmake6.2/: Readme.txt
Weight/cmake6.2/demo01/build-demo-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo.ilk
Weight/cmake6.2/demo01/demo/: CMakeLists.txt  res.qrc
Weight/cmake6.2/demo01/demo/src/app/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
Weight/cmake6.2/demo01/demo/src/thread/: CMakeLists.txt
Weight/cmake6.2/demo02/build-demo02-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  demo02.ilk  qtcsettings.cmake
Weight/cmake6.2/demo02/build-demo02-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo02.ilk  qtcsettings.cmake
Weight/cmake6.2/demo02/demo02/: CMakeLists.txt  fragment.frag  mainwindow.ui  opengl_widget.cpp  opengl_widget.h  res.qrc  vertex.vert  widget.ui
Weight/cmake6.2/demo03/build-demo03-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  demo03.ilk
Weight/cmake6.2/demo03/build-demo03-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo03.ilk
Weight/cmake6.2/demo03/demo03/: CMakeLists.txt  CMakeLists.txt.user.9557804  Fragment.frag  Vertex.vert  res.qrc  widget.cpp
Weight/cmake6.2/demo04/build-demo04-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  demo04.ilk  qtcsettings.cmake
Weight/cmake6.2/demo04/build-demo04-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  demo04.ilk  qtcsettings.cmake
Weight/cmake6.2/demo04/demo04/: CMakeLists.txt  Fragment.frag  Vertex.vert  mainwindow.ui  res.qrc  (+2 more)
Weight/cmake6.2/demo08/demo08/: CMakeLists.txt  ffmpeg_widget.cpp  ffmpeg_widget.h  main.cpp  media.h  widget.cpp  widget.h  widget.ui
Weight/cmake6.2/demo08/demo08/thread/: CMakeLists.txt  worker.cpp  worker.h
Weight/cmake6.2/demo09/demo09/: CMakeLists.txt  Fragment.frag  Vertex.vert  media.cpp  media.h  opengl_widget.cpp  opengl_widget.h  res.qrc  widget.cpp  widget.h  widget.ui
Weight/cmake6.2/demo09/demo09/thread/: worker.cpp  worker.h
(+1869 files in other folders)
